Add cachebusters to CSS and JS

--- a/support/shake/1lab-shake.cabal
+++ b/support/shake/1lab-shake.cabal
@@ -54,6 +54,7 @@ executable shake
     , Shake.AgdaCompile
     , Shake.AgdaRefs
     , Shake.Diagram
+    , Shake.Digest
     , Shake.Git
     , Shake.KaTeX
     , Shake.LinkGraph
